--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и фиолетовым" />
+						<div class="wrapper"><span class="card__img-title">&lt;/HTML&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и фиолетовым" /></div>
 						<div class="card__content">
 							<p>
 								Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как
 								новые знания могут повлиять на ваше будущее.
 							</p>
-							<p>Место для ваших воспоминаний о начале обучения.</p>
+							<p>Я помню, что очень боялась начинать, вдруг не справлюсь? Меня поддержали друзья, родные и мой муж. так я и начала обучение!</p>
 						</div>
 					</article>
 
@@ -91,15 +91,15 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">1 спринт: Я — чистый лист</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с коричневым и темным фоном" />
+						<div class="wrapper"><span class="card__img-title">&lt;/HTML&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон с коричневым и темным фоном" /></div>
 						<div class="card__content">
 							<p>
 								На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым
 								листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с
 								чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
 							</p>
-							<p>Место для ваших воспоминаний о начале первого спринта.</p>
+							<p> Первый проект дался не просто. Был страх, что я не успею и справлюсь хуже, чем остальные!</p>
 						</div>
 					</article>
 
@@ -140,14 +140,14 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">1 спринт: А если не получится?</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с яркостью красный и розовый" />
+						<div class="wrapper"><span class="card__img-title">&lt;CSS&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон с яркостью красный и розовый" /> </div>
 						<div class="card__content">
 							<p>
 								Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы,
 								наоборот, могли вдохновиться успехами и поверить в себя.
 							</p>
-							<p>Место для ваших воспоминаний об окончании первого спринта.</p>
+							<p>После получения зачёта я была очень рада и хотелось поскорее продолжить обучение!</p>
 						</div>
 					</article>
 
@@ -188,15 +188,15 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">2 спринт: Погоня за идеалом</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и сиреневым" />
+						<div class="wrapper"><span class="card__img-title">&lt;desigions&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и сиреневым" /></div>
 						<div class="card__content">
 							<p>
 								На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться
 								погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать
 								идеально, старались просто сделать.
 							</p>
-							<p>Место для ваших воспоминаний о начале второго спринта.</p>
+							<p>Конечно, старалась просто сделать, но когда поняла что времени у меня хватает, я постаралась максимально довести до идеала проект и ещё раз повторить теорию!</p>
 						</div>
 					</article>
 
@@ -237,15 +237,15 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">2 спринт: О тех, кто рядом</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон зеленый" />
+						<div class="wrapper"><span class="card__img-title">care;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон зеленый" /></div>
 						<div class="card__content">
 							<p>
 								Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали
 								одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не
 								поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
 							</p>
-							<p>Место для ваших воспоминаний об окончании второго спринта.</p>
+							<p>Мне очень помогали наставники и сами студенты, кто понимал лучше!</p>
 						</div>
 					</article>
 
@@ -286,14 +286,14 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">3 спринт: Обходные стратегии</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон сепия" />
+						<div class="wrapper"><span class="card__img-title">&lt;support&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон сепия" /></div>
 						<div class="card__content">
 							<p>
 								На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит,
 								пришло время посмотреть на задачу под другим углом.
 							</p>
-							<p>Место для ваших воспоминаний о начале третьего спринта.</p>
+							<p>Из-за некоторых сложностей пришлось перейти в другую группу помладше и взять перерыв, так как информации для меня оказалось слишком много. Естественно после отдыха у меня всё получилось!</p>
 						</div>
 					</article>
 
@@ -334,15 +334,15 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">3 спринт: Когда опускаются руки</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон размытый" />
+						<div class="wrapper"><span class="card__img-title">&lt;lifes-style: none;&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон размытый" /></div>
 						<div class="card__content">
 							<p>
 								Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется
 								порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда
 								вы её черпали.
 							</p>
-							<p>Место для ваших воспоминаний об окончании третьего спринта.</p>
+							<p>Перерывы между переходом в другие группы и каникулы в учёбе очень помогали не переутомиться!</p>
 						</div>
 					</article>
 
@@ -383,15 +383,15 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">«Сейчас я здесь»</h2>
-						<span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с красным фономи и зеленым цветом" />
+						<div class="wrapper"><span class="card__img-title">&lt;experience&gt;</span>
+						<img class="card__img" src="./images/car.jpg" alt="Фургон с красным фономи и зеленым цветом" /></div>
 						<div class="card__content">
 							<p>
 								Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу».
 								Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его
 								полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
 							</p>
-							<p>Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
+							<p>Вёртска очень интересна и я рада, что она не стоит на месте. В 2006 году я изучала её и тогда информации и разных языков было не так много. Сейчас же всё очень легко, так как много упрощений, статей,сайтов,тренажёров и пр. для работы!</p>
 						</div>
 					</article>
 
