--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<article class="card">
 						<h2 class="card__title">1 спринт: Я — чистый лист</h2>
 						<div class="wrapper"><span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с коричневым и темным фоном" /></div>
+						<img class="card__img filter_contrast" src="./images/car.jpg" alt="Фургон с коричневым и темным фоном" /></div>
 						<div class="card__content">
 							<p>
 								На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым
@@ -141,7 +141,7 @@
 					<article class="card">
 						<h2 class="card__title">1 спринт: А если не получится?</h2>
 						<div class="wrapper"><span class="card__img-title">&lt;CSS&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с яркостью красный и розовый" /> </div>
+						<img class="card__img filter_saturate" src="./images/car.jpg" alt="Фургон с яркостью красный и розовый" /> </div>
 						<div class="card__content">
 							<p>
 								Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы,
@@ -238,7 +238,7 @@
 					<article class="card">
 						<h2 class="card__title">2 спринт: О тех, кто рядом</h2>
 						<div class="wrapper"><span class="card__img-title">care;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон зеленый" /></div>
+						<img class="card__img filter_invert" src="./images/car.jpg" alt="Фургон зеленый" /></div>
 						<div class="card__content">
 							<p>
 								Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали
@@ -287,7 +287,7 @@
 					<article class="card">
 						<h2 class="card__title">3 спринт: Обходные стратегии</h2>
 						<div class="wrapper"><span class="card__img-title">&lt;support&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон сепия" /></div>
+						<img class="card__img filter_sepia" src="./images/car.jpg" alt="Фургон сепия" /></div>
 						<div class="card__content">
 							<p>
 								На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит,
@@ -335,7 +335,7 @@
 					<article class="card">
 						<h2 class="card__title">3 спринт: Когда опускаются руки</h2>
 						<div class="wrapper"><span class="card__img-title">&lt;lifes-style: none;&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон размытый" /></div>
+						<img class="card__img filter_blur" src="./images/car.jpg" alt="Фургон размытый" /></div>
 						<div class="card__content">
 							<p>
 								Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется
@@ -384,7 +384,7 @@
 					<article class="card">
 						<h2 class="card__title">«Сейчас я здесь»</h2>
 						<div class="wrapper"><span class="card__img-title">&lt;experience&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с красным фономи и зеленым цветом" /></div>
+						<img class="card__img filter_mix" src="./images/car.jpg" alt="Фургон с красным фономи и зеленым цветом" /></div>
 						<div class="card__content">
 							<p>
 								Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу».
