--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<article class="card">
 						<h2 class="card__title">2 спринт: Погоня за идеалом</h2>
 						<div class="wrapper"><span class="card__img-title">&lt;desigions&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и сиреневым" /></div>
+						<img class="card__img filter_grayscale" src="./images/car.jpg" alt="Фургон с оранжевым и сиреневым" /></div>
 						<div class="card__content">
 							<p>
 								На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться
