--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 		<script src="./scripts/set-theme.js"></script>
 	</head>
 	<body class="page">
+		<svg class="svg-sprite" >
+			<symbol id="floppy" viewBox="0 0 28 28">
+				<path fill="currentColor" d="M.5 0h2.15v2.15H.5zm0 2.15h2.15V4.3H.5zm0 2.16h2.15v2.15H.5zm0 2.15h2.15v2.15H.5zm0 2.16h2.15v2.15H.5zm0 2.15h2.15v2.15H.5zm0 2.15h2.15v2.15H.5zm0 2.16h2.15v2.15H.5zm0 2.15h2.15v2.15H.5zm0 2.15h2.15v2.15H.5zm0 2.16h2.15v2.15H.5zm0 2.15h2.15v2.15H.5zm0 2.16h2.15V28H.5zM24.2 0v2.15h-2.16V0zm-2.16 0v2.15h-2.15V0zm-2.16 0v2.15h-2.15V0zm-2.15 0v2.15h-2.15V0zm-2.15 0v2.15h-2.15V0zm-2.16 0v2.15h-2.15V0zm-2.15 0v2.15H9.12V0zM9.12 0v2.15H6.97V0zM6.96 0v2.15H4.81V0zM4.8 0v2.15H2.67V0zm21.55 2.16V4.3H24.2V2.16zM6.96 4.3v2.16H4.8V4.3zm0-2.15V4.3H4.81V2.15zm0 4.31v2.15H4.81V6.46zM22.04 4.3v2.16h-2.15V4.3zm0-2.15V4.3H19.9V2.15zm0 4.31v2.15H19.9V6.46zM17.73 4.3v2.16h-2.15V4.3zm0-2.15V4.3h-2.15V2.15zm0 4.31v2.15h-2.15V6.46zm4.3 2.16v2.15h-2.15V8.62zm-2.15-.01v2.15h-2.15V8.61zm-2.15 0v2.15h-2.15V8.61zm-2.16.01v2.15h-2.15V8.62zm-2.15-.01v2.15h-2.15V8.61zm-2.16.01v2.15H9.11V8.62zm-2.15 0v2.15H6.96V8.62zm-2.15-.01v2.15H4.8V8.61zm17.23 6.46v2.15h-2.15v-2.15zm-2.15.01v2.15h-2.15v-2.15zm-2.16-.01v2.15h-2.15v-2.15zm-2.15.01v2.15h-2.15v-2.15zm-2.16 0v2.15h-2.15v-2.15zm-2.15-.01v2.15h-2.15v-2.15zm-2.15.01v2.15H9.12v-2.15zm-2.16 0v2.15H6.96v-2.15zm-2.15 0v2.15H4.8v-2.15zm17.24 2.15v2.15h-2.16v-2.15zm-17.24 0v2.15H4.81v-2.15zm17.24 2.15v2.15h-2.15v-2.15zm-17.23 0v2.15H4.82v-2.15zm17.23 2.16v2.15h-2.16v-2.15zm-17.24 0v2.15H4.8v-2.15zm0 2.16v2.14H4.81V23.7zm17.24-.01v2.15h-2.15v-2.15zm2.14 2.16V28H24.2v-2.15zm-2.15-.01V28h-2.15v-2.15zm-2.16.01V28h-2.15v-2.15zm-2.15-.01V28h-2.15v-2.15zm-2.15.01V28h-2.15v-2.15zm-2.16 0V28h-2.15v-2.15zm-2.15-.01V28h-2.15v-2.15zm-2.15.01V28H9.12v-2.15zm-2.16 0V28H6.96v-2.15zm-2.15-.01V28H4.8v-2.15zm-2.16.01V28H2.65v-2.15zM28.5 28h-2.15v-2.15h2.15zm0-2.16h-2.15V23.7h2.15zm0-2.14h-2.15v-2.16h2.15zm0-2.16h-2.15v-2.15h2.15zm0-2.15h-2.15v-2.15h2.15zm0-2.16h-2.15v-2.15h2.15zm0-2.16h-2.15v-2.15h2.15z"/>
+				<path fill="currentColor" d="M28.5 12.93h-2.15v-2.15h2.15zm0-2.16h-2.15V8.62h2.15zm0-2.16h-2.15V6.46h2.15zm0-2.15h-2.15V4.31h2.15z"/>
+			</symbol>
+		</svg>
+
 		<header class="header">
 			<span class="header__logo">&lt;/HTML&gt;</span>
 			<h1 class="header__subtitle">закрывающий тег</h1>
@@ -43,8 +50,10 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и фиолетовым" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;/HTML&gt;</span>
+							<img class="card__img" src="./images/car.jpg" alt="Фургон с оранжевым и фиолетовым" />
+						</div>
 						<div class="card__content">
 							<p>
 								Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как
@@ -91,15 +100,17 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">1 спринт: Я — чистый лист</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;/HTML&gt;</span>
-						<img class="card__img filter_contrast" src="./images/car.jpg" alt="Фургон с коричневым и темным фоном" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;/HTML&gt;</span>
+							<img class="card__img filter_contrast" src="./images/car.jpg" alt="Фургон с коричневым и темным фоном" />
+						</div>
 						<div class="card__content">
 							<p>
 								На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым
 								листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с
 								чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
 							</p>
-							<p> Первый проект дался не просто. Был страх, что я не успею и справлюсь хуже, чем остальные!</p>
+							<p>Первый проект дался не просто. Был страх, что я не успею и справлюсь хуже, чем остальные!</p>
 						</div>
 					</article>
 
@@ -140,8 +151,10 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">1 спринт: А если не получится?</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;CSS&gt;</span>
-						<img class="card__img filter_saturate" src="./images/car.jpg" alt="Фургон с яркостью красный и розовый" /> </div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;CSS&gt;</span>
+							<img class="card__img filter_saturate" src="./images/car.jpg" alt="Фургон с яркостью красный и розовый" />
+						</div>
 						<div class="card__content">
 							<p>
 								Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы,
@@ -188,15 +201,20 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">2 спринт: Погоня за идеалом</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;desigions&gt;</span>
-						<img class="card__img filter_grayscale" src="./images/car.jpg" alt="Фургон с оранжевым и сиреневым" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;desigions&gt;</span>
+							<img class="card__img filter_grayscale" src="./images/car.jpg" alt="Фургон с оранжевым и сиреневым" />
+						</div>
 						<div class="card__content">
 							<p>
 								На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться
 								погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать
 								идеально, старались просто сделать.
 							</p>
-							<p>Конечно, старалась просто сделать, но когда поняла что времени у меня хватает, я постаралась максимально довести до идеала проект и ещё раз повторить теорию!</p>
+							<p>
+								Конечно, старалась просто сделать, но когда поняла что времени у меня хватает, я постаралась максимально довести до идеала
+								проект и ещё раз повторить теорию!
+							</p>
 						</div>
 					</article>
 
@@ -237,8 +255,9 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">2 спринт: О тех, кто рядом</h2>
-						<div class="wrapper"><span class="card__img-title">care;</span>
-						<img class="card__img filter_invert" src="./images/car.jpg" alt="Фургон зеленый" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">care;</span> <img class="card__img filter_invert" src="./images/car.jpg" alt="Фургон зеленый" />
+						</div>
 						<div class="card__content">
 							<p>
 								Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали
@@ -286,14 +305,19 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">3 спринт: Обходные стратегии</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;support&gt;</span>
-						<img class="card__img filter_sepia" src="./images/car.jpg" alt="Фургон сепия" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;support&gt;</span>
+							<img class="card__img filter_sepia" src="./images/car.jpg" alt="Фургон сепия" />
+						</div>
 						<div class="card__content">
 							<p>
 								На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит,
 								пришло время посмотреть на задачу под другим углом.
 							</p>
-							<p>Из-за некоторых сложностей пришлось перейти в другую группу помладше и взять перерыв, так как информации для меня оказалось слишком много. Естественно после отдыха у меня всё получилось!</p>
+							<p>
+								Из-за некоторых сложностей пришлось перейти в другую группу помладше и взять перерыв, так как информации для меня оказалось
+								слишком много. Естественно после отдыха у меня всё получилось!
+							</p>
 						</div>
 					</article>
 
@@ -334,8 +358,10 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">3 спринт: Когда опускаются руки</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;lifes-style: none;&gt;</span>
-						<img class="card__img filter_blur" src="./images/car.jpg" alt="Фургон размытый" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;lifes-style: none;&gt;</span>
+							<img class="card__img filter_blur" src="./images/car.jpg" alt="Фургон размытый" />
+						</div>
 						<div class="card__content">
 							<p>
 								Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется
@@ -383,15 +409,20 @@
 				<li class="cards-list__item">
 					<article class="card">
 						<h2 class="card__title">«Сейчас я здесь»</h2>
-						<div class="wrapper"><span class="card__img-title">&lt;experience&gt;</span>
-						<img class="card__img filter_mix" src="./images/car.jpg" alt="Фургон с красным фономи и зеленым цветом" /></div>
+						<div class="wrapper">
+							<span class="card__img-title">&lt;experience&gt;</span>
+							<img class="card__img filter_mix" src="./images/car.jpg" alt="Фургон с красным фономи и зеленым цветом" />
+						</div>
 						<div class="card__content">
 							<p>
 								Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу».
 								Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его
 								полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
 							</p>
-							<p>Вёртска очень интересна и я рада, что она не стоит на месте. В 2006 году я изучала её и тогда информации и разных языков было не так много. Сейчас же всё очень легко, так как много упрощений, статей,сайтов,тренажёров и пр. для работы!</p>
+							<p>
+								Вёртска очень интересна и я рада, что она не стоит на месте. В 2006 году я изучала её и тогда информации и разных языков было не
+								так много. Сейчас же всё очень легко, так как много упрощений, статей,сайтов,тренажёров и пр. для работы!
+							</p>
 						</div>
 					</article>
 
@@ -432,15 +463,15 @@
 		</main>
 
 		<button type="button" onclick="window.modal.showModal();" aria-controls="modal" class="button button__save">
-			<svg class="button__icon" viewBox="0 0 29 28">
-				<use href="svg/floppy.svg#floppy" />
+			<svg class="button__icon">
+				<use href="#floppy" />
 			</svg>
 			<span class="button__text">Сохранить на память</span>
 		</button>
 		<dialog class="modal" id="modal">
 			<div class="modal__content">
-				<svg class="modal__icon" viewBox="0 0 29 28">
-					<use href="svg/floppy.svg#floppy" />
+				<svg class="modal__icon">
+					<use href="#floppy" />
 				</svg>
 				<p>Вставьте дискету,чтобы продолжить</p>
 			</div>
