--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 				<svg viewBox="0 0 39 39" class="button-image__save">
 					<use href="#floppy"/>
 				</svg>
-				<p class="button__text">Вставьте дискету, чтобы продолжить</p>
+				<p class="button__text">Вставьте<br />дискету, чтобы<br />продолжить</p>
 			</div>
 			  <form method="dialog">
                             <button
