--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -144,7 +144,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -194,7 +194,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -248,7 +248,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -298,7 +298,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -351,7 +351,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -402,7 +402,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
@@ -456,7 +456,7 @@
 							</svg>
 						</button>
 
-						<button type="button" class="card__like-button">
+						<button type="button" class="card__like-button button">
 							<span class="button__text">Like</span>
 						</button>
 					</div>
