--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</svg>
 
 		<header class="header">
-			<span class="header__logo">&lt;/HTML&gt;</span>
+			<a class="header__logo">&lt;/HTML&gt;</a>
 			<h1 class="header__subtitle">закрывающий тег</h1>
 			<nav class="theme-menu header__theme-menu">
 				<!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -64,7 +64,7 @@
 					</article>
 					<div class="card__buttons">
 						<button class="card__icon-button" type="button">
-							<svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg" class="like-icon">
+							<svg aria-hidden="true" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg" class="like-icon">
 								<g class="heart">
 									<path
 										class="contour"
@@ -473,7 +473,7 @@
 				<svg viewBox="0 0 39 39" class="button-image__save">
 					<use href="#floppy" />
 				</svg>
-				<p class="button__text">Вставьте<br />дискету, чтобы<br />продолжить</p>
+				<p class="button__text">Вставьте дискету, чтобы продолжить</p>
 			</div>
 			<form method="dialog">
 				<button class="button button__dialog" type="button" onclick="window['dialog'].close()">
