object-fit: contain в .card__img

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 			</div>
 			<form method="dialog">
 				<button class="button button__dialog" type="button" onclick="window['dialog'].close()">
-					<span class="button-dialog__text">OK</span>
+					<span class="button__text">OK</span>
 				</button>
 			</form>
 		</dialog>
